--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -34,7 +34,7 @@
     "#Author: Santiago Pascual\n",
     "\n",
     "\"\"\"\n",
-    "This script exemplifies a linear regression example with theano, including\n",
+    "This script exemplifies a linear regression system with theano, including\n",
     "a real time plot showing the approximation result\n",
     "\"\"\"\n",
     "\n",
